--- a/web2/Dockerfile-web
+++ b/web2/Dockerfile-web
@@ -1,9 +1,6 @@
-FROM python:3.7-alpine
+FROM node:14
 WORKDIR /code
-ENV FLASK_APP app.py
-ENV FLASK_RUN_HOST 0.0.0.0
-RUN apk add --no-cache gcc musl-dev linux-headers
-COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+RUN yarn
 COPY . .
-CMD ["flask", "run"]
+
+CMD ["node", "main.js"]
